# goptfoo

./: .gitignore  Makefile.am  README  configure.ac  goptfoo.3  goptfoo.c  goptfoo.h.in  goptfoo.pc.in
demo/: Makefile.am  goptfoo.c
lib/: Makefile.am  goptfoo.c  goptfoo.h
man/: Makefile.am  goptfoo.3
